NEWSTART-223 Fix zoomed tile gap

--- a/app/assets/css/mobile.less
+++ b/app/assets/css/mobile.less
@@ -23,7 +23,7 @@
   position: relative;
   z-index: 40;
   color: #fff;
-  height: 44px;
+  height: @start-masthead-height;
   line-height: 42px;
 
   .back-btn {
