--- a/app/assets/css/variables.less
+++ b/app/assets/css/variables.less
@@ -1,3 +1,6 @@
 @tile-height: 125px;
 @tile-gutter: 4px;
 @tile-padding: 6px;
+
+@start-masthead-height: 44px;
+@start-tabbar-height: 44px;
